# RegularizedDiscriminantAnalysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/actions/setup-python-env/: action.yml
.github/workflows/: mypy.yml  pytest.yml  ruff.yml
examples/: rda_example.ipynb  rda_prova.ipynb
src/regularizeddiscriminantanalysis/: classifier.py
tests/: _test_sklearn_compatibility.py  test_rda.py  test_sklearn_compatibility.py
